"Make duplicates real" on dupliverts doesn't keep hierarchy #49718

Closed
opened 2016-10-15 02:59:25 +02:00 by ChameleonScales · 13 comments

The children (spheres) get all parented to only one parent (empty) instead of being each parented to their associated empty.

Blender 2.78 Linux

- Open this blend file : [Dupliverts hierarchy.blend](https://archive.blender.org/developer/F378555/Dupliverts_hierarchy.blend) - Click on Object > Apply > Make duplicates real - Enable "Keep hierarchy" The children (spheres) get all parented to only one parent (empty) instead of being each parented to their associated empty. Blender 2.78 Linux

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ChameleonScales

Added subscriber: @ChameleonScales
Member

Added subscriber: @LucaRood-3

Added subscriber: @LucaRood-3
Luca Rood self-assigned this 2016-11-20 02:45:57 +01:00
Member

Only the first dupli instance of each object is being stored in parent_gh, as they are all treated as the same hash key.
Will fix it by adding vertex index to the GHash computation.

Only the first dupli instance of each object is being stored in `parent_gh`, as they are all treated as the same hash key. Will fix it by adding vertex index to the `GHash` computation.

This issue was referenced by 99c5c8befc

This issue was referenced by 99c5c8befcfc319a4700384ff41e69bda1c66625
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks a lot. I just grabbed a daily build but the fix wasn't there yet apparently. When should I expect to find it ?

Thanks a lot. I just grabbed a daily build but the fix wasn't there yet apparently. When should I expect to find it ?
Member

The fix is in the daily builds. You can always check what is in the daily builds, by taking the build hash, and matching it against the commits here: https://developer.blender.org/diffusion/B/history/master/
All commits up to and including the one with the hash in the build, are included.

Are you sure you are not accidentally running the wrong Blender executable? You can check by looking if the hash on the splash screen matches the hash in the filename of the archive you downloaded.

The fix is in the daily builds. You can always check what is in the daily builds, by taking the build hash, and matching it against the commits here: https://developer.blender.org/diffusion/B/history/master/ All commits up to and including the one with the hash in the build, are included. Are you sure you are not accidentally running the wrong Blender executable? You can check by looking if the hash on the splash screen matches the hash in the filename of the archive you downloaded.

Woops, I forgot to check "Keep hierarchy"...
You rock, man ! Thanks a lot for this fix.
And thanks for this last tip.

Woops, I forgot to check "Keep hierarchy"... You rock, man ! Thanks a lot for this fix. And thanks for this last tip.

Why is this bug fix neither in the a nor the b release ?

Why is this bug fix neither in the a nor the b release ?

and still not in c

and still not in c
Member

It isn't in 'a' because it was committed after that release.
It isn't in 'b' because that only included performance improvements.
It isn't in 'c' because that was only to fix regressions caused by 'b'.

All changes to master (including this fix) will be released as expected in 2.79

It isn't in 'a' because it was committed after that release. It isn't in 'b' because that only included performance improvements. It isn't in 'c' because that was only to fix regressions caused by 'b'. All changes to master (including this fix) will be released as expected in 2.79

ok thanks !

ok thanks !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49718
No description provided.